# traductor_es_ro

./: .gitignore  AGENTS.md  GEMINI.md
.agents/rules/: 01_seguridad_y_costes.md  (+2 more)
docs/: 00_indice_y_mapa_documental.md  01_contexto_y_objetivo_funcional.md  02_arquitectura_tecnica.md  03_plan_laboratorio_fase_0.md  04_seguridad_privacidad_y_costes.md  05_frontend_y_experiencia_usuario.md  06_proveedores_adaptadores_y_fallbacks.md  07_tests_validacion_y_go_no_go.md  08_plan_implementacion_desarrolladores.md  09_modelo_operativo_chats_y_equipos.md
output/: plan_fase_2.md
traductor_rumano_lab/: .env.example  .gitignore  README.md  pyproject.toml
traductor_rumano_lab/scripts/: prueba_fake_texto_traduccion_voz.py  prueba_gtts_texto_voz.py  prueba_real_traduccion.py  verificar_entorno.py
traductor_rumano_lab/src_lab/: __init__.py
traductor_rumano_lab/src_lab/cache/: __init__.py  cache_frases_simple.py
traductor_rumano_lab/src_lab/config/: __init__.py  settings_lab.py
traductor_rumano_lab/src_lab/ports/: __init__.py  puerto_generador_voz.py  puerto_traductor_texto.py
traductor_rumano_lab/src_lab/providers_fake/: __init__.py  traductor_fake.py  voz_fake.py
traductor_rumano_lab/src_lab/providers_real/: __init__.py  traductor_deepl.py  voz_gtts.py
traductor_rumano_lab/src_lab/utils/: __init__.py  guardar_resultados.py  medir_tiempos.py  normalizar_texto.py
traductor_rumano_lab/tests/: __init__.py  test_cache.py  test_settings.py  test_traductor_deepl.py  test_traductor_fake.py  test_verificar_entorno.py  test_voz_fake.py  test_voz_gtts.py
(+10 files in other folders)
